objects/ASI_MFM_VAT_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Attachment_Link__c</fullName>
        <label>Attachment Link (Interfaced)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU (Interfaced)</label>
        <referenceTo>ASI_MFM_BU__c</referenceTo>
        <relationshipLabel>VAT Invoices</relationshipLabel>
        <relationshipName>VAT_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Currency__c</fullName>
        <label>Currency (Interfaced)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL_Status__c</fullName>
        <label>ETL Status (Interfaced)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Index_Number__c</fullName>
        <label>Index Number (Interfaced)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Amount__c</fullName>
        <label>Invoice Amount (Interfaced)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Code__c</fullName>
        <label>Invoice Code (Interfaced)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Date__c</fullName>
        <label>Invoice Date (Interfaced)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Type__c</fullName>
        <label>Invoice Type (Interfaced)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Overdue_Date__c</fullName>
        <formula>ASI_MFM_Invoice_Date__c + 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Amount__c</fullName>
        <formula>ASI_MFM_PO_No__r.ASI_MFM_PO_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO No (Interfaced)</label>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>VAT Invoices</relationshipLabel>
        <relationshipName>VAT_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Remarks__c</fullName>
        <label>PO Remarks</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Type__c</fullName>
        <formula>TEXT(ASI_MFM_PO_No__r.ASI_MFM_PO_Type__c)</formula>
        <label>PO Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Paid_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment No</label>
        <referenceTo>ASI_MFM_Payment__c</referenceTo>
        <relationshipLabel>VAT Invoices</relationshipLabel>
        <relationshipName>VAT_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Status__c</fullName>
        <formula>TEXT(ASI_MFM_Payment_No__r.ASI_MFM_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Reciept_Not_Paid__c</fullName>
        <formula>ASI_MFM_Invoice_Amount__c -  ASI_MFM_Paid_Amount__c</formula>
        <label>Reciept Not Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remarks__c</fullName>
        <label>Remarks (Interfaced)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Supplier_Tax_Code__c</fullName>
        <label>Supplier Tax Code (Interfaced)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier (Interfaced)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>VAT Invoices</relationshipLabel>
        <relationshipName>VAT_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code (Interfaced)</label>
        <referenceTo>ASI_MFM_Tax_Code__c</referenceTo>
        <relationshipLabel>VAT Invoices</relationshipLabel>
        <relationshipName>VAT_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AS_MFM_Invoice_Amount_Before_Tax__c</fullName>
        <formula>ASI_MFM_Invoice_Amount__c /(1 + ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount (Before Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>VAT Invoice</label>
    <listViews>
        <fullName>ASI_MFM_CN_Close</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Invoice_Type__c</columns>
        <columns>ASI_MFM_Invoice_Code__c</columns>
        <columns>ASI_MFM_Invoice_Date__c</columns>
        <columns>ASI_MFM_Supplier__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Invoice_Amount__c</columns>
        <columns>ASI_MFM_Remarks__c</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_ETL_Status__c</columns>
        <columns>ASI_MFM_PO_No__c</columns>
        <columns>ASI_MFM_Payment_No__c</columns>
        <columns>ASI_MFM_Payment_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_VAT_Invoice__c.ASI_MFM_CN_VAT_Invoice</value>
        </filters>
        <filters>
            <field>ASI_MFM_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>CN Invoice - Close</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CN_Invoice</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Invoice_Type__c</columns>
        <columns>ASI_MFM_Invoice_Code__c</columns>
        <columns>ASI_MFM_Invoice_Date__c</columns>
        <columns>ASI_MFM_Supplier__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Invoice_Amount__c</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_ETL_Status__c</columns>
        <columns>ASI_MFM_PO_No__c</columns>
        <columns>ASI_MFM_Payment_No__c</columns>
        <columns>ASI_MFM_Payment_Date__c</columns>
        <columns>ASI_MFM_Attachment_Link__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_VAT_Invoice__c.ASI_MFM_CN_VAT_Invoice</value>
        </filters>
        <label>CN Invoice</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CN_Invoice_Overdue</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Invoice_Type__c</columns>
        <columns>ASI_MFM_Invoice_Code__c</columns>
        <columns>ASI_MFM_Invoice_Date__c</columns>
        <columns>ASI_MFM_Overdue_Date__c</columns>
        <columns>ASI_MFM_Supplier__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Invoice_Amount__c</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_PO_No__c</columns>
        <columns>ASI_MFM_Payment_No__c</columns>
        <columns>ASI_MFM_Payment_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_VAT_Invoice__c.ASI_MFM_CN_VAT_Invoice</value>
        </filters>
        <filters>
            <field>ASI_MFM_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>ASI_MFM_Overdue_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>CN Invoice - Overdue</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CN_Open</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Invoice_Type__c</columns>
        <columns>ASI_MFM_Invoice_Code__c</columns>
        <columns>ASI_MFM_Invoice_Date__c</columns>
        <columns>ASI_MFM_Supplier__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Invoice_Amount__c</columns>
        <columns>ASI_MFM_Remarks__c</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_ETL_Status__c</columns>
        <columns>ASI_MFM_PO_No__c</columns>
        <columns>ASI_MFM_Payment_No__c</columns>
        <columns>ASI_MFM_Payment_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_VAT_Invoice__c.ASI_MFM_CN_VAT_Invoice</value>
        </filters>
        <filters>
            <field>ASI_MFM_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>ASI_MFM_Remarks__c</field>
            <operation>equals</operation>
            <value>22163610</value>
        </filters>
        <label>CN Invoice - Open</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CN_Pending_Interface</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_MFM_Invoice_Type__c</columns>
        <columns>ASI_MFM_Invoice_Code__c</columns>
        <columns>ASI_MFM_Invoice_Date__c</columns>
        <columns>ASI_MFM_Supplier__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Invoice_Amount__c</columns>
        <columns>ASI_MFM_Remarks__c</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_ETL_Status__c</columns>
        <columns>ASI_MFM_PO_No__c</columns>
        <columns>ASI_MFM_Payment_No__c</columns>
        <columns>ASI_MFM_Payment_Date__c</columns>
        <columns>ASI_MFM_Attachment_Link__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_VAT_Invoice__c.ASI_MFM_CN_VAT_Invoice</value>
        </filters>
        <filters>
            <field>ASI_MFM_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>ASI_MFM_ETL_Status__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </filters>
        <filters>
            <field>ASI_MFM_ETL_Status__c</field>
            <operation>equals</operation>
        </filters>
        <label>CN Invoice - Pending Interface</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>VAT Invoice No (Interfaced)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VAT Invoices</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_VAT_Invoice</fullName>
        <active>true</active>
        <label>CN VAT Invoice</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>